package files;
public enum Car_status {
    Stand,
    Work;
}
