package files;

public class Rag {
    public  Rag(String name){

    }
}
