package files;

public interface be_afraid_of_fire {
    void  fire();
}
