package files;

public class big_ugly_spots {
    public void be_on_surface(int n){
        if(n==1){
        System.out.println(" -> большие безобразные пятна на поверхности.");
    }}

}
