package files;

public interface took_a_breath_away {
    public int breath();
}
