package files;
public class Flame_boys {
    public int danse(int n){

        if (n==0){
            System.out.println("Язычки пламени грустят =(");
            return 0;
        }else {
            System.out.println("Язычки пламени весело заплясали. ");
            return 1;
        }
    }

}


