package files;

public class KarlsonIsNotReadyToFly extends Exception{
    public KarlsonIsNotReadyToFly(String message) {

        super(message);
    }
}
