package files;
public class Spirtovka {
    public String name;

    public Spirtovka(String name) {
        this.name = name;
    }
    public String name(){
        return " спиртовку ";
    }
}

