package files;

public class WrongSpeed extends RuntimeException{
    public String WrongSpeed(){
        return "Отрицательная скорость";
    }
}
