package files;
public interface be_afraid {
    int be_afraid(int n);
}
